[gd_scene load_steps=44 format=2]

[ext_resource path="res://src/main/puzzle/result/BarGraphBar.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/main/puzzle/result/BarGraphGoal.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/main/utils/outline.shader" type="Shader" id=3]
[ext_resource path="res://assets/main/ui/font/fredoka-one-regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://src/main/puzzle/result/bar-graph-bar.shader" type="Shader" id=5]
[ext_resource path="res://assets/main/puzzle/line-erase.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/main/career/ui/progress-board-appear.wav" type="AudioStream" id=7]
[ext_resource path="res://src/main/puzzle/result/results-hud.gd" type="Script" id=8]
[ext_resource path="res://src/main/puzzle/result/receipt-bar-graph.gd" type="Script" id=9]
[ext_resource path="res://src/main/puzzle/result/receipt-table.gd" type="Script" id=10]
[ext_resource path="res://src/main/puzzle/result/receipt-stamp.gd" type="Script" id=11]
[ext_resource path="res://src/main/puzzle/result/bar-graph-sfx.gd" type="Script" id=12]
[ext_resource path="res://src/main/puzzle/result/receipt-header.gd" type="Script" id=13]
[ext_resource path="res://src/main/puzzle/result/receipt-medal.gd" type="Script" id=14]
[ext_resource path="res://assets/main/puzzle/result/receipt-table.png" type="Texture" id=15]
[ext_resource path="res://assets/main/puzzle/result/combo-texture.png" type="Texture" id=16]
[ext_resource path="res://assets/main/puzzle/result/medal-hand.png" type="Texture" id=17]
[ext_resource path="res://assets/main/puzzle/result/receipt-grade-sheet.png" type="Texture" id=18]
[ext_resource path="res://assets/main/puzzle/result/receipt-header.png" type="Texture" id=19]
[ext_resource path="res://assets/main/puzzle/result/stamp-hand.png" type="Texture" id=20]
[ext_resource path="res://assets/main/puzzle/result/medal-sheet.png" type="Texture" id=21]
[ext_resource path="res://assets/main/puzzle/result/bar-pop.wav" type="AudioStream" id=22]
[ext_resource path="res://assets/main/puzzle/result/medal-shimmer.wav" type="AudioStream" id=23]
[ext_resource path="res://assets/main/puzzle/result/medal-bang.wav" type="AudioStream" id=24]
[ext_resource path="res://assets/main/puzzle/result/box-texture.png" type="Texture" id=25]
[ext_resource path="res://assets/main/puzzle/result/receipt-paper.png" type="Texture" id=26]
[ext_resource path="res://assets/main/puzzle/result/extra-texture.png" type="Texture" id=27]

[sub_resource type="DynamicFont" id=1]
size = 24
outline_size = 3
outline_color = Color( 0.305882, 0.227451, 0.196078, 1 )
use_filter = true
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 4 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=4]
resource_name = "play"
length = 0.25
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.0833333, 0.133333, 0.183333, 0.233333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0.8, 0.8 ), Vector2( 0.9, 1.1 ), Vector2( 1.07, 0.93 ), Vector2( 0.95, 1.05 ), Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "method"
tracks/2/path = NodePath("HeaderSfx")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[sub_resource type="DynamicFont" id=2]
use_filter = true
extra_spacing_top = -3
extra_spacing_bottom = -3
font_data = ExtResource( 4 )

[sub_resource type="ShaderMaterial" id=21]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/node_size = Vector2( 85, 77 )
shader_param/black = Color( 0.305882, 0.227451, 0.196078, 1 )
shader_param/white = Color( 0.831373, 0.831373, 0.831373, 1 )
shader_param/accent_scale = 0.125
shader_param/accent_rotation = 200.0
shader_param/accent_swapped = true
shader_param/accent_texture = ExtResource( 25 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=20]
shader = ExtResource( 5 )
shader_param/node_size = Vector2( 85, 153 )
shader_param/black = Color( 0.305882, 0.227451, 0.196078, 1 )
shader_param/white = Color( 0.831373, 0.831373, 0.831373, 1 )
shader_param/accent_scale = 0.125
shader_param/accent_rotation = 70.0
shader_param/accent_swapped = false
shader_param/accent_texture = ExtResource( 16 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=7]
resource_local_to_scene = true
shader = ExtResource( 5 )
shader_param/node_size = Vector2( 85, 37 )
shader_param/black = Color( 0.305882, 0.227451, 0.196078, 1 )
shader_param/white = Color( 0.831373, 0.831373, 0.831373, 1 )
shader_param/accent_scale = 0.25
shader_param/accent_rotation = 0.0
shader_param/accent_swapped = false
shader_param/accent_texture = ExtResource( 27 )

[sub_resource type="StyleBoxFlat" id=13]
resource_local_to_scene = true
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_color = Color( 0, 0, 0, 1 )

[sub_resource type="ShaderMaterial" id=16]
shader = ExtResource( 3 )
shader_param/width = 5.0
shader_param/black = Color( 0.423529, 0.262745, 0.192157, 1 )
shader_param/edge_fix_factor = 1.0

[sub_resource type="Animation" id=14]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 98, 370 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ -11.2 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hand:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hand:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("InkClip/Ink:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=15]
resource_name = "play"
length = 0.666667
step = 0.0166667
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.333333, 0.666667 ),
"transitions": PoolRealArray( 1.5, 1, 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0.35, 0.35 ), Vector2( 0.25, 0.25 ), Vector2( 0.25, 0.25 ), Vector2( 0.35, 0.35 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hand:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.333333, 0.666667 ),
"transitions": PoolRealArray( 1.5, 1, 1.5, 1 ),
"update": 0,
"values": [ Vector2( 279, 370 ), Vector2( 98, 370 ), Vector2( 98, 370 ), Vector2( 279, 370 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hand:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.133333, 0.333333, 0.666667 ),
"transitions": PoolRealArray( 1.5, 1, 1.5, 1 ),
"update": 0,
"values": [ 10.0, -11.2, -11.2, 10.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Hand:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.6, 0.666667 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("../..")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "stamp"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Hand:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.666667 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/6/type = "method"
tracks/6/path = NodePath("StampSfx")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0.15 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("InkClip/Ink:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.133334 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="ShaderMaterial" id=17]
shader = ExtResource( 3 )
shader_param/width = 5.0
shader_param/black = Color( 0.423529, 0.262745, 0.192157, 1 )
shader_param/edge_fix_factor = 1.0

[sub_resource type="Animation" id=19]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 300, 507 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hand:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Medal:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hand:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0.25, 0.25 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Medal:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hand:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=18]
resource_name = "play"
step = 0.0666667
tracks/0/type = "value"
tracks/0/path = NodePath("Hand:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.133333, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 334, 153 ), Vector2( 205, 293 ), Vector2( 341, 515 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Hand:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.133333, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ 7.0, 0.0, -20.0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Hand:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.0333333, 0.266667, 0.333333 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Medal:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.133333 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Hand:scale")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.133333 ),
"transitions": PoolRealArray( 1.5, 1 ),
"update": 0,
"values": [ Vector2( 0.35, 0.35 ), Vector2( 0.25, 0.25 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Medal:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0.133333, 0.666667, 0.733333, 0.8, 0.866667, 0.933333 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 2, 1, 3, 4, 5, 2 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Hand:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "method"
tracks/7/path = NodePath("BangSfx")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0.133333 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}
tracks/8/type = "method"
tracks/8/path = NodePath("ShimmerSfx")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0.8 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [ 0.0 ],
"method": "play"
} ]
}

[node name="ResultsHud" type="Control" groups=["night_mode_light"]]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
script = ExtResource( 8 )

[node name="ReceiptPaper" type="TextureRect" parent="."]
margin_left = 765.0
margin_top = 4.0
margin_right = 1023.0
margin_bottom = 716.0
texture = ExtResource( 26 )
expand = true

[node name="Header" type="TextureRect" parent="ReceiptPaper"]
margin_left = 16.5
margin_top = 20.0
margin_right = 241.5
margin_bottom = 107.5
rect_pivot_offset = Vector2( 112, 43.75 )
texture = ExtResource( 19 )
expand = true
script = ExtResource( 13 )

[node name="Label" type="Label" parent="ReceiptPaper/Header"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_colors/font_color = Color( 0.85098, 0.85098, 0.85098, 1 )
custom_fonts/font = SubResource( 1 )
text = "Level
Complete!"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReceiptPaper/Header"]
anims/RESET = SubResource( 3 )
anims/play = SubResource( 4 )

[node name="HeaderSfx" type="AudioStreamPlayer" parent="ReceiptPaper/Header"]
stream = ExtResource( 6 )
volume_db = -2.0
bus = "Sound Bus"

[node name="Table" type="TextureRect" parent="ReceiptPaper"]
margin_left = 13.0
margin_top = 110.0
margin_right = 245.0
margin_bottom = 152.0
texture = ExtResource( 15 )
expand = true
script = ExtResource( 10 )

[node name="BoxesLabel" type="Label" parent="ReceiptPaper/Table"]
margin_left = 3.0
margin_top = 2.0
margin_right = 78.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.305882, 0.227451, 0.196078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Boxes
¥0"
align = 1
valign = 1

[node name="CombosLabel" type="Label" parent="ReceiptPaper/Table"]
margin_left = 78.0
margin_top = 2.0
margin_right = 153.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.305882, 0.227451, 0.196078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Combos
¥0"
align = 1
valign = 1

[node name="ExtraLabel" type="Label" parent="ReceiptPaper/Table"]
margin_left = 154.0
margin_top = 2.0
margin_right = 229.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.305882, 0.227451, 0.196078, 1 )
custom_fonts/font = SubResource( 2 )
text = "Extra
¥0"
align = 1
valign = 1

[node name="LabelRefreshTimer" type="Timer" parent="ReceiptPaper/Table"]
wait_time = 0.05

[node name="BarGraph" type="Control" parent="ReceiptPaper"]
margin_left = 13.0
margin_top = 160.0
margin_right = 245.0
margin_bottom = 710.0
rect_clip_content = true
script = ExtResource( 9 )
receipt_table_path = NodePath("../Table")

[node name="Contents" type="Control" parent="ReceiptPaper/BarGraph"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="BoxBar" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 1 )]
material = SubResource( 21 )
margin_top = 371.0
margin_right = 85.0
margin_bottom = 448.0
custom_styles/panel = SubResource( 11 )

[node name="ComboBar" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 1 )]
material = SubResource( 20 )
margin_top = 219.0
margin_right = 85.0
margin_bottom = 372.0
custom_styles/panel = SubResource( 12 )

[node name="OtherBar" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 1 )]
material = SubResource( 7 )
margin_top = 183.0
margin_right = 85.0
margin_bottom = 220.0
custom_styles/panel = SubResource( 13 )

[node name="TotalLabel" type="Label" parent="ReceiptPaper/BarGraph/Contents"]
margin_top = 163.0
margin_right = 85.0
margin_bottom = 183.0
custom_colors/font_color = Color( 0.305882, 0.227451, 0.196078, 1 )
custom_fonts/font = SubResource( 2 )
text = "¥387"
align = 1
valign = 1

[node name="SuccessGoal" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 198.0
margin_right = 200.0
margin_bottom = 218.0

[node name="SssGoal" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 198.0
margin_right = 200.0
margin_bottom = 218.0

[node name="SsGoal" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 271.0
margin_right = 200.0
margin_bottom = 291.0
text = "¥20,000: SS"

[node name="SGoal" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 331.0
margin_right = 200.0
margin_bottom = 351.0
text = "¥15,000: S"

[node name="AGoal" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 380.0
margin_right = 200.0
margin_bottom = 400.0
text = "¥10,000: A"

[node name="BGoal" parent="ReceiptPaper/BarGraph/Contents" instance=ExtResource( 2 )]
margin_left = 0.0
margin_top = 423.0
margin_right = 200.0
margin_bottom = 443.0
text = "¥5,000: B"

[node name="Sfx" type="Node" parent="ReceiptPaper/BarGraph"]
script = ExtResource( 12 )

[node name="Pop" type="AudioStreamPlayer" parent="ReceiptPaper/BarGraph/Sfx"]
stream = ExtResource( 22 )
volume_db = -12.0
bus = "Sound Bus"

[node name="Stamp" type="Control" parent="ReceiptPaper"]
margin_left = 73.0001
margin_top = -135.0
margin_right = 113.0
margin_bottom = -95.0
script = ExtResource( 11 )

[node name="InkClip" type="Control" parent="ReceiptPaper/Stamp"]
margin_left = -64.0001
margin_top = 229.0
margin_right = 177.0
margin_bottom = 529.0
rect_clip_content = true

[node name="Ink" type="Sprite" parent="ReceiptPaper/Stamp/InkClip"]
visible = false
modulate = Color( 1, 1, 1, 0.784314 )
position = Vector2( 162, 142 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 18 )
hframes = 5
vframes = 4
frame = 7

[node name="Hand" type="Sprite" parent="ReceiptPaper/Stamp"]
visible = false
material = SubResource( 16 )
position = Vector2( 98, 370 )
rotation = -0.195477
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 20 )
offset = Vector2( 225, 800 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReceiptPaper/Stamp"]
anims/RESET = SubResource( 14 )
anims/play = SubResource( 15 )

[node name="StampSfx" type="AudioStreamPlayer" parent="ReceiptPaper/Stamp"]
stream = ExtResource( 6 )
volume_db = -2.0
bus = "Sound Bus"

[node name="Medal" type="Control" parent="ReceiptPaper"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 14 )

[node name="Medal" type="Sprite" parent="ReceiptPaper/Medal"]
visible = false
position = Vector2( 204, 283 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 21 )
hframes = 3
vframes = 2
frame = 2

[node name="Hand" type="Sprite" parent="ReceiptPaper/Medal"]
visible = false
material = SubResource( 17 )
position = Vector2( 300, 507 )
scale = Vector2( 0.25, 0.25 )
z_index = 1
texture = ExtResource( 17 )
offset = Vector2( 350, 850 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="ReceiptPaper/Medal"]
anims/RESET = SubResource( 19 )
anims/play = SubResource( 18 )

[node name="BangSfx" type="AudioStreamPlayer" parent="ReceiptPaper/Medal"]
stream = ExtResource( 24 )
volume_db = 2.0
bus = "Sound Bus"

[node name="ShimmerSfx" type="AudioStreamPlayer" parent="ReceiptPaper/Medal"]
stream = ExtResource( 23 )
volume_db = -12.0
bus = "Sound Bus"

[node name="Shadow" type="Polygon2D" parent="ReceiptPaper" groups=["night_mode_dark"]]
show_behind_parent = true
position = Vector2( 73.0001, -135 )
scale = Vector2( 0.444724, 0.444458 )
color = Color( 0.345098, 0.14902, 0.0705882, 1 )
antialiased = true
polygon = PoolVector2Array( -129.116, 322.644, -116.927, 330.74, -112.429, 326.24, -98.9377, 330.74, -87.6948, 317.24, -71.9547, 314.99, -56.2146, 317.24, -44.9717, 314.99, -20.2373, 319.49, -13.4916, 314.99, 20.2373, 314.99, 24.7344, 319.49, 31.4802, 319.49, 35.9773, 314.99, 56.2146, 312.74, 60.7118, 308.241, 71.9547, 310.49, 76.4519, 305.991, 94.4406, 305.991, 112.429, 314.99, 146.158, 314.99, 159.65, 310.49, 179.887, 317.24, 188.881, 317.24, 197.876, 321.74, 200.124, 317.24, 224.859, 317.24, 236.101, 312.74, 249.593, 312.74, 265.333, 310.49, 278.825, 312.74, 292.316, 308.241, 308.056, 308.241, 319.299, 314.99, 332.791, 314.99, 350.779, 321.74, 362.022, 321.74, 368.768, 317.24, 380.011, 317.24, 391.254, 308.241, 409.243, 305.991, 409.243, 1892.19, 395.751, 1905.69, -143.91, 1905.69, -143.91, 335.24 )

[node name="Sfx" type="Node" parent="."]

[node name="ReceiptHide" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 7 )
volume_db = -8.0
bus = "Sound Bus"

[node name="ReceiptShow" type="AudioStreamPlayer" parent="Sfx"]
stream = ExtResource( 7 )
volume_db = -8.0
pitch_scale = 1.1
bus = "Sound Bus"

[connection signal="timeout" from="ReceiptPaper/Table/LabelRefreshTimer" to="ReceiptPaper/Table" method="_on_LabelRefreshTimer_timeout"]
